{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 7,
  "lineage": "47c0b14c-14ce-7f44-0a99-e1310e6c2ed0",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-05T05:47:34.698-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sapient-tangent-456419-j5/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/sapient-tangent-456419-j5/global/networks/default",
            "priority": 1000,
            "project": "sapient-tangent-456419-j5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sapient-tangent-456419-j5/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-05T05:47:35.532-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sapient-tangent-456419-j5/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/sapient-tangent-456419-j5/global/networks/default",
            "priority": 1000,
            "project": "sapient-tangent-456419-j5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sapient-tangent-456419-j5/global/firewalls/allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20250530",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/sapient-tangent-456419-j5/zones/us-central1-a/disks/tariq-cloud-1-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/sapient-tangent-456419-j5/zones/us-central1-a/instances/tariq-cloud-1-vm",
            "instance_id": "1615652784406537596",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "tariq:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCnhND46Acmjl15pejmWrcJKMyxFgTwGeTuFPxQZYW2fAv9h4k/ivSlc88wSy8+8aUA/DxJQoSdk4pV/6CWmGR/CPZZRg7tgGgwGg6MuJkRGIEjvZ1kxRKu9cxTblr6iZz67nwvpjZVd5UsnHEfq5ckWoK8NYZLGYJUAMm9ODlmjJG04Dy5I9NejFmv5TZ+3/WNDId7rFMoeFl8i6RtcjOfcAZZ2QIDh9guFXttGzPBtp8PBDJCBlMcvoQaqmbJ5X/tjcePzNVtWbqpbFAiy1fiJYENGDWi5VdoE2/iQrXv/EbA0EdOYY2TDBh3jfyzulZE226P3opXZcZzhP7K01BNGdJohYUEwO92wm9SJeH0V0D7SPs4SgEJXfn4sv/jUVF1Nm+aakfb+tWEbEPSh8vosGDMNNYhrfK4Xky4EGD+t8y [...]
              "startup-script": "        #!/bin/bash\n        set -e\n\n        # Set the user password\n        echo \"tariq:Cloud-1-password\" | chpasswd\n\n        # Remove tariq from google-sudoers if present\n        deluser tariq google-sudoers || true\n\n        # Create custom sudoers file that requires password\n        echo \"tariq ALL=(ALL) ALL\" \u003e /etc/sudoers.d/tariq-requires-password\n        chmod 440 /etc/sudoers.d/tariq-requires-password\n      \n"
            },
            "metadata_fingerprint": "k6r-DkBC3iw=",
            "name": "tariq-cloud-1-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.66.134.174",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/sapient-tangent-456419-j5/global/networks/default",
                "network_ip": "10.128.0.15",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/sapient-tangent-456419-j5/regions/us-central1/subnetworks/default",
                "subnetwork_project": "sapient-tangent-456419-j5"
              }
            ],
            "project": "sapient-tangent-456419-j5",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sapient-tangent-456419-j5/zones/us-central1-a/instances/tariq-cloud-1-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "dev",
              "web"
            ],
            "tags_fingerprint": "XaeQnaHMn9Y=",
            "zone": "us-central1-a"
          }
        }
      ]
    }
  ]
}